# libxlsxwriter-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Readme.md  appveyor.yml
include/: CMakeLists.txt  xlsxwriter.hpp
include/xlsxwriter/: app.hpp  chart.h  chart.hpp  common.hpp  content_types.hpp  core.hpp  custom.hpp  drawing.hpp  format.hpp  hash_table.hpp  packager.hpp  relationships.h  relationships.hpp  shape.hpp  shared_strings.hpp  styles.hpp  theme.hpp  utility.h  utility.hpp  workbook.hpp  worksheet.h  worksheet.hpp  xmlwriter.hpp
src/: CMakeLists.txt  XlsxWriter.def  app.cpp  app.hpp  chart.c  chart.cpp  chart.hpp  common.hpp  content_types.cpp  content_types.hpp  core.cpp  core.hpp  custom.cpp  custom.hpp  drawing.cpp  drawing.hpp  format.cpp  format.hpp  hash_table.cpp  hash_table.hpp  packager.cpp  packager.hpp  relationships.cpp  relationships.hpp  shape.hpp  shared_strings.cpp  shared_strings.hpp  styles.cpp  styles.hpp  theme.cpp  theme.hpp  utility.cpp  utility.hpp  workbook.c  workbook.cpp  workbook.hpp  worksheet.cpp  worksheet.hpp  xmlwriter.cpp  xmlwriter.cpp.autosave  (+1 more)
test/: CMakeLists.txt
test/functional/src/: test_array_formula01.cpp  test_array_formula02.cpp  test_autofilter00.cpp  test_autofilter01.cpp  test_chart_area01.cpp  test_chart_area02.cpp  test_chart_area03.cpp  test_chart_axis01.cpp  test_chart_axis02.cpp  test_chart_axis04.cpp  test_chart_axis05.cpp  test_chart_axis06.cpp  test_chart_axis07.cpp  test_chart_bar01.cpp  test_chart_bar02.cpp  test_chart_bar03.cpp  test_chart_bar04.cpp  test_chart_bar05.cpp  test_chart_bar06.cpp  test_chart_bar08.cpp  test_chart_bar09.cpp  test_chart_bar10.cpp  test_chart_bar11.cpp  test_chart_bar19.cpp  test_chart_bar20.cpp  test_chart_bar21.cpp  test_chart_bar22.cpp  test_chart_bar51.cpp  test_chart_bar52.cpp  test_chart_bar53.cpp  test_chart_bar54.cpp  test_chart_bar55.cpp  test_chart_bar61.cpp  test_chart_bar65.cpp  test_chart_bar69.cpp  test_chart_bar70.cpp  test_chart_column01.cpp  test_chart_column02.cpp  test_chart_column03.cpp  test_chart_column05.cpp  (+209 more)
test/functional/xlsx_files/: autofilter00.xlsx  autofilter01.xlsx  chart_area01.xlsx  chart_area02.xlsx  chart_area03.xlsx  chart_axis01.xlsx  chart_axis02.xlsx  chart_axis04.xlsx  chart_axis05.xlsx  chart_axis06.xlsx  chart_axis07.xlsx  chart_bar01.xlsx  chart_bar02.xlsx  chart_bar03.xlsx  chart_bar04.xlsx  chart_bar05.xlsx  chart_bar06.xlsx  chart_bar08.xlsx  chart_bar09.xlsx  chart_bar10.xlsx  chart_bar11.xlsx  chart_bar19.xlsx  chart_bar20.xlsx  chart_bar21.xlsx  chart_bar22.xlsx  chart_bar51.xlsx  chart_bar52.xlsx  chart_bar53.xlsx  chart_bar54.xlsx  chart_bar61.xlsx  chart_bar65.xlsx  chart_bar69.xlsx  chart_bar70.xlsx  chart_column01.xlsx  chart_column02.xlsx  chart_column03.xlsx  chart_column05.xlsx  chart_column06.xlsx  chart_column07.xlsx  chart_column08.xlsx  (+330 more)
test/unit/: CMakeLists.txt
test/unit/xmlwriter/: test_xmlwriter.c
